syntax = "proto3";
package protomsg;
import "msg_common.proto";
import "msg_common_guild.proto";
import "msg_common_map.proto";
import "msg_common_task.proto";

// 客户端请求个人公会基本信息
message MsgCL2GSGuildBaseInfoRequest
{
}

// 服务器下发公会基本信息
message MsgGS2CLGuildBaseInfoReply
{

  protomsg.PlayerGuildInfo info = 1;

    int32   error_code      = 99;       // 结果和错误码
}

// 同步敌对公会列表
message MsgGS2CLGuildHostilityNotice
{
    repeated uint64 hostility_guild_ids = 1; // 敌对公会列表
}

// 创建公会请求
message MsgCL2GSGuildCreateRequest
{
    protomsg.GuildParam param = 1;
}

// 创建公会结果
message MsgGS2CLGuildCreateReply
{
    uint64  guild_id        = 1;        // 公会ID
    int32   error_code      = 99;       // 结果和错误码
}

// 玩家加入公会通知
message MsgGS2CLGuildJoinNotice
{
  protomsg.PlayerGuildInfo info = 1;
}

// 玩家退出公会通知
message MsgGS2CLGuildQuitNotice
{
}

// 会长变化通知
message MsgGS2CLGuildMasterChangedNotice
{
	GuildMemberData master = 1; // 新会长信息
}

// 公会增加新成员通知
message MsgGS2CLGuildAddMemberNotice
{
	GuildMemberData member = 1; // 新入会成员信息
}

// 公会移除成员通知
message MsgGS2CLGuildRemoveMemberNotice
{
  uint64  player_id     = 1;    // 退会玩家ID
}

// 公会经验 等级变化
message MsgGS2CLGuildExpAndLevelNotice
{
	uint32 exp = 1;
  uint32 level = 2;
}

// 申请加入公会
message MsgCL2GSGuildJoinRequest
{
    uint64  guild_id        = 1;
    bool    is_invited      = 2;  // 是否被邀请(公会邀请邮件使用)
}

// 申请加入公会结果(申请成功或失败，非加入公会成功)
message MsgGS2CLGuildJoinReply
{
    uint64  guild_id        = 1;
    int32   error_code      = 99;       // 结果和错误码
}

// 申请退出公会
message MsgCL2GSGuildQuitRequest
{
}

// 退出公会结果
message MsgGS2CLGuildQuitReply
{
    int32   error_code      = 99;       // 结果和错误码
}

// 列出申请加入公会者列表
message MsgCL2GSGuildListApplicantRequest
{
}

message MsgGS2CLGuildListApplicantReply
{
    repeated ApplicantData applicants   = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 通知新增申请者信息
message MsgGS2CLGuildAddApplicantNotice
{
	ApplicantData applicant = 1;
}

// 通知移除申请者信息
message MsgGS2CLGuildRemoveApplicantNotice
{
  uint64 player_id  = 1;
}


// 回复公会申请(拒绝/同意)
message MsgCL2GSGuildAnswerApplyRequest
{
    uint64 player_id    = 1;
    bool    agree       = 2;    
}

// 服务器回复结果
message MsgGS2CLGuildAnswerApplyReply
{
    uint64 player_id    = 1;
    bool    agree       = 2;    
    int32   error_code  = 99;   // 结果和错误码
}

// 升级/降级 成员职务请求
message MsgCL2GSGuildChangePositionRequest
{
    uint64 player_id    = 1;
    GuildPosition position      = 2;
}

message MsgGS2CLGuildChangePositionReply
{
    uint64 player_id    = 1;
    GuildPosition position      = 2;    // 成功则返回新职务, MsgGuildPosition
    bool is_up = 3; //是否升级
    int32   error_code  = 99;   // 结果和错误码
}

// 查询公会具体信息
message MsgCL2GSGuildQueryRequest
{
    uint64 guild_id     = 1;
}

// 回复公会具体信息
message MsgGS2CLGuildQuserReply
{
    uint64 guild_id     = 1;
    protomsg.GuildParam param = 2;
    repeated GuildMemberData members    = 3;    // 所有成员信息
    uint64 total_power = 4; // 公会总战力
    repeated GuildOfficialInfo officials = 5; // 官员任命信息
    GuildBriefData brief    = 7;              // 公会简要信息
    repeated protomsg.TaskData achievement_data	= 8;//成就
    repeated protomsg.GuildMedalWallInfo medal_wall_info = 9;//勋章墙
    int32   error_code  = 99;   // 结果和错误码
}

// 踢掉指定玩家
message MsgCL2GSGuildKickMemberRequest
{
    uint64 player_id    = 1;    // 要踢掉的玩家ID
    uint32 reason           = 2;    // 参见枚举GuildQuitReason
}

message MsgGS2CLGuildKickMemberReply
{
    uint64 player_id    = 1;    // 要踢掉的玩家ID
    int32   error_code  = 99;   // 结果和错误码
}

// 更新公会公告
message MsgCL2GSGuildSetBulletinRequest
{
    string bulletin     = 1;    // 更新公会公告
}

message MsgGS2CLGuildSetBulletinReply
{
    string bulletin     = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 更新招人条件
message MsgCL2GSGuildSetJoinConditionRequest
{
    protomsg.GuildJoinType join_type    = 1;    // MsgGuildJoinType枚举
    GuildJoinCondition condition = 2;   
}

message MsgGS2CLGuildSetJoinConditionReply
{
    protomsg.GuildJoinType join_type    = 1;    // MsgGuildJoinType枚举
    GuildJoinCondition condition = 2;   
    int32   error_code  = 99;   // 结果和错误码
}

// 发送公会邮件
message MsgCL2GSGuildSendMailRequest
{
    string subject      = 1;
    string content      = 2;
}

message MsgGS2CLGuildSendMailReply
{
    int32   error_code  = 99;   // 结果和错误码
}

// 发送公会确认邮件
message MsgCL2GSGuildSendConfirmMailRequest
{
    string subject      = 1;
    string content      = 2;
    ConfirmMailTimeLength time_type = 3;
}

message MsgGS2CLGuildSendConfirmMailReply
{
    int32   error_code  = 99;   // 结果和错误码
}


// 回复公会确认邮件
message MsgCL2GSGuildAnswerConfirmMailRequest
{
    string uuid     = 1;    // 邮件UUID
    bool agree      = 2;    // 是否同意
}

message MsgGS2CLGuildAnswerConfirmMailReply
{
    string uuid     = 1;            // 邮件UUID
    int32   error_code  = 99;   // 结果和错误码
}


// 查看公会确认邮件结果数据
message MsgCL2GSGuildViewConfirmDataRequest
{
    string uuid     = 1;    // 邮件UUID
}

message MsgGS2CLGuildViewConfirmDataReply
{
    string uuid = 1;
    GuildConfirmDetailInfo info     = 2;
    int32   error_code  = 99;   // 结果和错误码
}

// 通知客户端更新正在申请公会列表
message MsgGS2CLGuildApplyGuildListNotice
{
    repeated GuildApplyRecord apply_records = 1;
}

// 综合设置公告、加入条件(不能更新公会图标、名称、简称)
message MsgCL2GSGuildUpdateParamRequest
{
    GuildParam param    = 1;
}

message MsgGS2CLGuildUpdateParamReply
{
    GuildParam param    = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 改名
message MsgCL2GSGuildUpdateNameRequest
{
  string name     = 1;
}

message MsgGS2CLGuildUpdateNameReply
{
  string name     = 1;
  int32   error_code  = 99;   // 结果和错误码
}

// 改简称
message MsgCL2GSGuildUpdateShortNameRequest
{
  string short_name = 1;
}

message MsgGS2CLGuildUpdateShortNameReply
{
  string short_name = 1;
  int32   error_code  = 99;   // 结果和错误码
}

// 更改图标
message MsgCL2GSGuildUpdateIconRequest
{
  uint32  icon  = 1;
}

message MsgGS2CLGuildUpdateIconReply
{
  uint32  icon  = 1;
  int32   error_code  = 99;   // 结果和错误码
}

// 公会搜索
message MsgCL2GSGuildSearchRequest
{
    GuildSearchCondition search_condition   = 1;    
}

message MsgGS2CLGuildSearchReply
{
    repeated GuildBriefData guilds  = 1;        // 搜索到的公会信息(客户端需要自己重新排序)
    int32   error_code  = 99;   // 结果和错误码
}

// 推荐公会列表
message MsgCL2GSRecommendGuildListRequest
{
}

message MsgGS2CLRecommendGuildListReply
{
    repeated GuildBriefData guilds  = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 推荐一个公会
message MsgCL2GSRecommendGuildRequest
{
}

message MsgGS2CLRecommendGuildReply
{
    GuildBriefData guild    = 1;
    int32   error_code  = 99;   // 结果和错误码
}


// 解散公会
message MsgCL2GSGuildDismissRequest
{

}

message MsgGS2CLGuildDismissReply
{
    int32   error_code  = 99;   // 结果和错误码
}

// 客户端请求联盟邀请列表
message MsgCL2GSGuildListInviteeRequest
{
}

message MsgGS2CLGuildListInviteeReply
{
    repeated GuildInviteeData invitees = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 邀请玩家
message MsgCL2GSGuildInviteRequest
{
    uint64 player_id = 1;
}

message MsgGS2CLGuildInviteReply
{
    uint64 player_id = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 查找最近活跃的未入会玩家
message MsgCL2GSGuildSearchInviteeRequest
{
    string name         = 1;
}

message MsgGS2CLGuildSearchInviteeReply
{
    string name     = 1;
    repeated GuildInviteeData invitees = 2;
    int32   error_code  = 99;   // 结果和错误码
}


// 取消公会申请
message MsgCL2GSGuildCancelApplyRequest
{
    uint64 guild_id = 1;
}

message MsgGS2CLGuildCancelApplyReply
{
    uint64 guild_id = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 任命官员
message MsgCL2GSAppointOfficialRequest
{
    uint64 player_id        = 1;
    GuildOfficial official = 2;
}

message MsgGS2CLAppointOfficialReply
{
    uint64 player_id        = 1;
    GuildOfficial official = 2;
    int32   error_code  = 99;   // 结果和错误码
}

// 卸任官员
message MsgCL2GSDeposeOfficialRequest
{
    GuildOfficial official = 1;
}

message MsgGS2CLDeposeOfficialReply
{
    GuildOfficial official = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 更新公会欢迎邮件
message MsgCL2GSUpdateWelcomeMailRequest
{
    string content = 1;
}

message MsgGS2CLUpdateWelcomeMailReply
{
    int32   error_code  = 99;   // 结果和错误码
}

// 获取公会欢迎邮件内容
message MsgCL2GSGetWelcomeMailRequest
{

}

message MsgGS2CLGetWelcomeMailReply
{
    string content = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 查看公会成员排行榜
message MsgCL2GSGuildQueryMemberRankBoardRequest
{
    MemberRankBoardType type = 1;
}

message MsgGS2CLGuildQueryMemberRankBoardReply
{
    MemberRankBoardType type = 1;
    GuildMemberRankBoard board = 2;
    int32   error_code  = 99;   // 结果和错误码
}

// 搜索本服玩家
message MsgCL2GSGuildSearchPlayerRequest
{
    uint64 player_id    = 1;            // ID != 0， 则按照ID搜索
    string name             = 2;            // 按照名字搜索(name长度必须 >= 2)
}

message MsgGS2CLGuildSearchPlayerReply
{
    repeated SearchPlayer result = 1;
    int32   error_code  = 99;   // 结果和错误码
}

//查询工会成员位置
message MsgCL2GSGuildMembersPositionRequest
{
    uint64 player_id    = 1;
}

message MsgGS2CLGuildMembersPositionReply
{
    uint64 player_id    = 1;
    vector2d position   = 2;  //位置 
    int32   error_code  = 99;  // 结果和错误码
}




///////////////////////////////////////公会集结////////////////////////////////////
// 创建集结
message MsgCL2GSCreateGuildMarchRequest
{
    MarchCommand command     = 1;
    ArmyData army_data       = 2;
    uint32   wait_time_index = 3;
    uint64   region_id       = 4;
    GuildMarchLimit  limit   = 5;
}

message MsgGS2CLCreateGuildMarchReply
{
    uint64 guild_march_entity_id  = 1; 
    uint64 region_id              = 2;
    int32  error_code  = 99;   // 结果和错误码
}

message MsgCL2GSDisbandGuildMarchRequest
{
    uint64 guild_march_entity_id = 1;
    uint64 region_id             = 2;
}

message MsgGS2CLDisbandGuildMarchReply
{
    int32   error_code  = 99;   // 结果和错误码
}

// 移除工会集结通知
message MsgGS2CLRemoveGuildMarchNotice
{
    uint64   guild_march_entity_id = 1;
}

// 创建集结
message MsgCL2GSChangeGuildMarchLimitRequest
{
    uint64   region_id             = 1;
    uint64   guild_march_entity_id = 2;
    GuildMarchLimit  limit         = 3;
}

message MsgGS2CLChangeGuildMarchLimitReply
{
    int32  error_code  = 99;   // 结果和错误码
}


///////////////////////////////////////公会集结////////////////////////////////////


///////////////////////////////////////公会仓库////////////////////////////////////
// 查看联盟仓库
message MsgCL2GSGuildQueryStoreRequest
{

}

message MsgGS2CLGuildQueryStoreReply
{
  protomsg.GuildStoreInfo store = 1;
  protomsg.GuildStoreHistory history = 2;   
    int32   error_code  = 99;   // 结果和错误码
}

// 查看玩家公会未领取公会资源
message MsgCL2GSGuildQueryPlayerGuildResourceRequest
{

}

message MsgGS2CLGuildQueryPlayerGuildResourceReply
{
	PlayerGuildResourceInfo info = 1;
	int32	error_code	= 99;	// 结果和错误码
}

// 领取玩家公会资源
message MsgCL2GSGuildCollectPlayerGuildResourceRequest
{

}

message MsgGS2CLGuildCollectPlayerGuildResourceReply
{
	repeated Resource resources		= 1;	// 领取的资源
	PlayerGuildResourceInfo info	= 2;
	int32	error_code	= 99;	// 结果和错误码

}

///////////////////////////////////////公会仓库////////////////////////////////////



///////////////////////////////////////公会建筑////////////////////////////////////
// 建造联盟建筑
message MsgCL2GSConstructGuildBuildingRequest
{
  int32 config_id   = 1;
    uint32 march_index = 2;
    ArmyData army_data  = 3;
    protomsg.vector2d position = 4;
}

message MsgGS2CLConstructGuildBuildingReply
{
  uint64 entity_id = 1;
    int32   error_code  = 99;   // 结果和错误码
}

// 联盟建筑列表
message MsgCL2GSGuildBuildingListRequest
{
}

message MsgGS2CLGuildBuildingListReply
{ 
  QueryGuildBuildingListInfo info = 1;
    int32   error_code  = 99;   // 结果和错误码
}



// 联盟建筑灭火
message MsgCL2GSOutfireRequest
{
  int32 config_id   = 1;
    uint64 entity_id = 2;
    OutfireType outfire = 3;
}

message MsgGS2CLOutfireReply
{
    int32   error_code  = 99;   // 结果和错误码
}

// 联盟建筑拆除
message MsgCL2GSGuildBuildingRemoveRequest
{
    uint64 entity_id = 2;
}

message MsgGS2CLGuildBuildingRemoveReply
{
    int32   error_code  = 99;   // 结果和错误码
}

///////////////////////////////////////公会建筑////////////////////////////////////

///////////////////////////////////////公会奇观关卡////////////////////////////////////
message MsgCL2GSGuildTempleAndPassRequest
{
    
}

message MsgGS2CLGuildTempleAndPassReply
{
    repeated protomsg.GuildTempleData temple_datas = 1;
    repeated protomsg.GuildPassData pass_datas = 2;
    repeated protomsg.GuildStrongholdData stronghold_datas = 3;
    int32   error_code  = 99;
}

message MsgGS2CLGuildTempleAndPassNotice
{
    
}

///////////////////////////////////////公会奇观关卡////////////////////////////////////

///////////////////////////////////////公会标签////////////////////////////////////

message MsgGS2CLAddGuildLabelNotice
{
    protomsg.GuildLabelBaseData data = 1;
}

message MsgGS2CLCancelGuildLabelNotice
{
    uint32 label_id = 1;
    uint64 region_id = 7;
}

message MsgCL2GSAddGuildLabelRequest
{
    uint32 label_id = 1;
    vector2d pos = 2;
    string content = 3;
    uint64 region_id = 7;
    bool notice_mail = 5;
}

message MsgGS2CLAddGuildLabelReply
{
    int32 error_code = 99;
}

message MsgCL2GSCancelGuildLabelRequest
{
    uint32 label_id = 1;
    uint64 region_id = 7;
}

message MsgGS2CLCancelGuildLabelReply
{
    int32 error_code = 99;
}

message MsgGS2CLGuildLabelListNotice
{
    protomsg.GuildLabelData data = 1;
}

///////////////////////////////////////公会标签////////////////////////////////////


///////////////////////////////////////公会帮助////////////////////////////////////
// 客户端请求查看公会交互帮助列表
message MsgCL2GSGuildAssistListRequest
{
}

message MsgGS2CLGuildAssistListReply
{
    repeated GuildAssistDetail details  = 1;
    uint32  day_contribution        = 2;                // 今天帮助已增加的贡献度
    repeated GuildAssistItem history    = 3;    // 请求公会交互帮助历史

    int32 error_code = 99;          // 结果
}

// 服务器通知客户端交互帮助信息更新
message MsgGS2CLGuildAssistUpdateNotice
{
    // 若complete_assists + wait_assists >= max_times，则表示完成，客户端自行删除
    GuildAssistDetail detail    = 1;    
}

// 玩家请求公会帮助
message MsgCL2GSGuildAssistAskForAssistRequest
{
    GuildAssistItem item    = 1;
}

message MsgGS2CLGuildAssistAskForAssistReply
{
    GuildAssistItem item    = 1;
    int32 error_code = 99;          // 结果
}

// 玩家请求帮助别人
message MsgCL2GSGuildAssistHelpOtherRequest
{
}

message MsgGS2CLGuildAssistHelpOtherReply
{
    uint32 assist_count = 1;        // 帮助的次数
    uint32 contribution = 2;        // 增加的公会贡献度
    int32 error_code = 99;          // 结果
}

// 当天公会交互帮助已增加的贡献度
message MsgGS2CLGuildAssistDayContributionNotice
{
    uint32  day_contribution        = 1;    // 今天帮助已增加的联盟个人积分
}


///////////////////////////////////////公会帮助////////////////////////////////////

///////////////////////////////////////公会商店开始////////////////////////////////////

message MsgCL2GSGuildShopBuyItemResquest
{
    uint32 shop_item_id = 1;
    uint64 count = 2;
}

message MsgGS2CLGuildShopBuyItemReply
{
    uint32 shop_item_id = 1;
    uint64 count = 2;
    int32 error_code = 99;          // 结果
}

message MsgCL2GSGuildShopAddItemResquest
{
    uint32 shop_item_id = 1;
    uint64 count = 2;
}

message MsgGS2CLGuildShopAddItemReply
{
    uint32 shop_item_id = 1;
    uint64 count = 2;
    int32 error_code = 99;          // 结果
}

message MsgGS2CLGuildShopItemListNotice
{
    GuildShopItemAllInfo item_list = 1;
}

message MsgCL2GSGuildShopBuyItemListResquest
{

}

message MsgGS2CLGuildShopBuyItemListReply
{
    GuildShopItemAllInfo item_list = 1;
    int32 error_code = 99;          // 结果
}

message MsgCL2GSGuildShopBuyItemLogListResquest
{

}

message MsgGS2CLGuildShopBuyItemLogListReply
{
    GuildShopAllLogInfo log_list = 1;
    int32 error_code = 99;          // 结果
}

message MsgCL2GSGuildShopAddItemLogListResquest
{

}

message MsgGS2CLGuildShopAddItemLogListReply
{
    GuildShopAllLogInfo log_list = 1;
    int32 error_code = 99;          // 结果
}


///////////////////////////////////////公会商店结束////////////////////////////////////

////////////////////////////////////////////////////////
// 联盟礼物开始

// 登入发送通知包
message MsgGS2CLGuildGiftDataNotice
{
  GuildGiftData data = 1;
}

// 水晶礼物信息更新通知
message MsgGS2CLGuildGiftBaseInfoUpdateNotice
{
  GuildGiftBaseInfo info = 1;
}

// 联盟礼物信息更新通知
message MsgGS2CLGuildGiftInfoUpdateNotice
{
  repeated GuildGiftInfo guild_gift_infos  = 1; // 水晶联盟礼物
  repeated GuildGiftInfo normal_gift_infos = 2; // 普通联盟礼物
  repeated GuildGiftInfo rare_gift_infos   = 3; // 稀有联盟礼物
}

// 领取联盟礼物
message MsgCL2GSGuildGiftClaimRequest
{
  GuildGiftType type = 1;
  uint64 unique_id = 2;
}

message MsgGS2CLGuildGiftClaimReply
{
  uint64 unique_id = 1;
  GuildGiftType type = 2;
  protomsg.GuildGiftInfo update_gift_info = 3;
  int32 error_code = 99;  // 结果
}

// 联盟礼物普通礼物一键领取
message MsgCL2GSGuildGiftClaimAllRequest
{
}

message MsgGS2CLGuildGiftClaimAllReply
{
  repeated protomsg.GuildGiftInfo update_gift_infos = 1;
  int32 error_code = 99;  // 结果
}

// 联盟礼物 清空已领取和已超时的礼物
message MsgCL2GSGuildGiftCleanRequest
{
}

message MsgGS2CLGuildGiftCleanReply
{
  repeated GuildGiftInfo normal_gift_infos = 1; // 剩余未领取普通联盟礼物
  repeated GuildGiftInfo rare_gift_infos   = 2; // 剩余未领取稀有联盟礼物
  int32 error_code = 99;  // 结果
}

// 联盟礼物 使用匿名添加礼物
message MsgCL2GSGuildGiftUseAnonymousRequest
{
  bool is_use_anonymous = 1;
}

message MsgGS2CLGuildGiftUseAnonymousReply
{
  bool is_use_anonymous = 1;
  int32 error_code = 99;  // 结果
}

// 联盟礼物结束
////////////////////////////////////////////////////////

////////////////////////////////////////////////////////
// 联盟科技开始

// 联盟科技数据上线同步
message MsgGS2CLGuildTechDataNotice
{
  GuildTechData data = 1;
}

// 联盟捐献数据上线同步
message MsgGS2CLGuildTechDonateDataNotice
{
  GuildTechDonateInfo data = 1;
}

message MsgGS2CLGuildTechDailyRefreshNotice
{
  GuildTechDonateInfo data = 1;
  int64 daily_value        = 2;  // 每日捐献值
}

// 获取联盟科技数据更新信息
message MsgCL2GSGuildTechInfoRequest
{
  int32 tech_id = 1;
}

message MsgGS2CLGuildTechInfoReply
{
  int32 tech_id      = 1;
  GuildTechInfo info = 2;
  int32 error_code   = 99; // 结果
}

// 捐献联盟科技
message MsgCL2GSGuildTechDonateRequest
{
  int32 tech_id           = 1;
  int32 level             = 2; // 当前捐献的等级
  bool is_use_gem         = 3; // 是否使用宝石的捐献
  bool is_skill           = 4; // 是否充能技能
}

message MsgGS2CLGuildTechDonateReply
{
  int32 tech_id                   = 1;
  int64 rate                      = 2;  // 增加的倍率
  GuildTechDonateInfo donate_info = 3;  // 捐献信息
  oneof tech_update_info {
    GuildTechInfo tech_info       = 4;  // 更新后的科技数据
    GuildTechSkillInfo skill_info = 5;  // 更新后的科技技能数据
  }
  int64 daily_value               = 6;  // 每日捐献值
  int32 error_code                = 99; // 结果
}

// 研究联盟科技
message MsgCL2GSGuildTechResearchRequest
{
  int32 tech_id = 1;
}

message MsgGS2CLGuildTechResearchReply
{
  int32 error_code   = 99;  // 结果
}

message MsgGS2CLGuildTechInfoUpdateNotice
{
  int32 tech_id                   = 1;
  oneof tech_update_info {
    GuildTechInfo tech_info       = 2;  // 更新后的科技数据
    GuildTechSkillInfo skill_info = 3;  // 更新后的科技技能数据
  }
  int32 cur_research_tech_id      = 4;
  int64 complete_time             = 5;
  int32 cur_active_skill          = 6; // 当前激活的技能
  int64 skill_end_time            = 7; // 当前技能失效时间
}

// 联盟科技推荐
message MsgCL2GSGuildTechRecommendRequest
{
  int32 tech_id = 1;
  bool is_skill = 2;  // 是否技能
}

message MsgGS2CLGuildTechRecommendReply
{
  int32 error_code = 99;  // 结果
}

message MsgGS2CLGuildTechRecommendNotice
{
  int32 tech_id = 1;
  bool is_skill = 2;  // 是否技能
}

message MsgCL2GSGuildTechUseSkillRequest
{
  int32 skill_tech_id = 1;
}

message MsgGS2CLGuildTechUseSkillReply
{
  int32 error_code = 99;  // 结果
}

// 联盟科技结束
////////////////////////////////////////////////////////

// 联盟活动
////////////////////////////////////////////////////////

message MsgCL2GSGuildGetActivityRequest
{
  
}

message MsgGS2CLGuildGetActivityReply
{
  int32 error_code   = 99;  // 结果
}

// 联盟活动
////////////////////////////////////////////////////////

// 联盟德比开始
////////////////////////////////////////////////////////

//公会德比玩家信息
message MsgGS2CLGuildDerbyPlayerInfoNotice
{
  int64 begin_time = 1;
  int64 end_time = 2;
  int64 apply_end_time = 3;
  int64 status = 4;
  bool is_apply = 5;
  uint32 score = 6;
  repeated GuildDerbyAccpptTaskInfo task_infos = 7; //可领取的任务
  
  repeated uint32 get_reward_ids = 8; //已经领取的奖励ID
  GuildDerbyPlayerTaskInfo task_info = 9; //当前领取的任务信息
  uint32 count = 10;  //已经领取的任务数量
  uint32 buy_count = 11; //购买的任务次数
  uint32 level = 12;
  uint32 my_score = 13; //我的分数
  bool accept_task = 14; //是否可以接受任务

  protomsg.GuildDerbyAutoRefreshInfos auto_refresh = 15;
}

//接受任务
message MsgCL2GSGuildDerbyAcceptTaskRequest
{
  uint32 id = 5; //任务的唯一ID
}

message MsgGS2CLGuildDerbyAcceptTaskReply
{
  GuildDerbyPlayerTaskInfo task_info = 1; //当前领取的任务信息
  repeated GuildDerbyAccpptTaskInfo task_infos = 2; //可领取的任务
  uint32 count = 9;       //已经领取的任务数量
  uint32 buy_count = 10;  //购买的任务次数
  int32 error_code = 99; 
}

//放弃任务
message MsgCL2GSGuildDerbyQuitTaskRequest
{

}

//放弃任务
message MsgGS2CLGuildDerbyQuitTaskReply
{
  GuildDerbyPlayerTaskInfo task_info = 1; //当前领取的任务信息
  repeated GuildDerbyAccpptTaskInfo task_infos = 2; //可领取的任务
  int32 error_code = 99; 
}

//提交任务
message MsgCL2GSGuildDerbySubmitTaskRequest
{
  
}

//提交任务
message MsgGS2CLGuildDerbySubmitTaskReply
{
  uint32 guild_score = 1;
  uint32 my_score = 2;
  GuildDerbyPlayerTaskInfo task_info = 3; //当前领取的任务信息
  repeated GuildDerbyAccpptTaskInfo task_infos = 4; //可领取的任务
  int32 error_code = 99; 
}

//请求公会德比信息
message MsgCL2GSGuildDerbyInfoRequest
{
  
}

message MsgGS2CLGuildDerbyInfoReply
{
  int32 error_code = 99; 
}

//报名公会德比
message MsgCL2GSGuildDerbyApplyRequest
{
  
}

message MsgGS2CLGuildDerbyApplyReply
{
  int32 error_code = 99; 
}

//请求公会德比玩家排行信息
message MsgCL2GSGuildDerbyMemberRankInfoRequest
{
  
}

message MsgGS2CLGuildDerbyMemberRankInfoReply
{
  repeated GuildDerbyPlayerInfo infos = 1;
  int32 error_code = 99; 
}

//请求公会德比公会排行信息
message MsgCL2GSGuildDerbyGuildRankInfoRequest
{
  
}

message MsgGS2CLGuildDerbyGuildRankInfoReply
{
  repeated GuildDerbyGuildInfo infos = 1;
  int32 error_code = 99; 
}

//公会德比获取奖励
message MsgCL2GSGuildDerbyGetRewardRequest
{
  uint32 index = 1;
}

message MsgGS2CLGuildDerbyGetRewardReply
{
  repeated uint32 get_reward_ids = 1; //已经领取的奖励ID
  protomsg.ResourceSet set = 2;
  int32 error_code = 99; 
}

//公会德比购买次数
message MsgCL2GSGuildDerbyBuyCountRequest
{
  
}

message MsgGS2CLGuildDerbyBuyCountReply
{
  uint32 buy_count = 1; //购买的任务次数
  int32 error_code = 99; 
}

//刷新任务
message MsgCL2GSGuildDerbyRefreshTaskRequest
{
  uint32 id = 1;//任务唯一ID
}

message MsgGS2CLGuildDerbyRefreshTaskReply
{
  repeated GuildDerbyAccpptTaskInfo task_infos = 1;
  int32 error_code = 99; 
}
//设置自动刷新
message MsgCL2GSGuildDerbySetAutoRefreshRequest
{
  uint32 quality = 1;
  bool is_open = 2;
}

message MsgGS2CLGuildDerbySetAutoRefreshReply
{
  int32 error_code = 99; 
}


message MsgGS2CLGuildDerbyTaskNotice
{
  protomsg.GuildDerbyPlayerTaskInfo task = 1;
}

//公会德比状态通知
message MsgGS2CLGuildDerbyStatusNotice
{
  uint32 season_id = 1;
  int64  begin_time = 2;
  int64  end_time = 3;
  int64  apply_end_time = 4;
  uint32 status = 5;
}

//公会德比状态通知
message MsgGS2CLGuildDerbyScoreNotice
{
  uint32 guild_score = 2;
}

message MsgGS2CLGuildDerbyAutoRefreshNotice
{
  protomsg.GuildDerbyAutoRefreshInfos infos = 13;
}

//公会德比报名玩家信息
message MsgCL2GSGuildDerbyApplyPlayerInfoRequest
{
  
}

message MsgGS2CLGuildDerbyApplyPlayerInfoReply
{
  repeated protomsg.GuildDerbyApplyPlayerInfo infos = 1;
  int32 error_code = 99; 
}

// 联盟德比结束
////////////////////////////////////////////////////////

// 公会状态通知
message MsgGS2CLMapGuildStatusInfoNotice
{
  uint64     region_id = 1;
	StatusData statuses  = 2;
}

// 公会状态更新通知
message MsgGS2CLMapGuildUpdateStatusNotice
{
  uint64     region_id = 1;
	StatusInfo status    = 2;
}

// 公会状态移除通知
message MsgGS2CLMapGuildRemoveStatusNotice
{
  uint64     region_id = 1;
	uint32     status_id = 2;
}

// 放弃城池消息
message MsgCL2GSGiveupTempleRequest
{
    uint64	temple_id = 1;
}

message MsgGS2CLGiveupTempleReply
{
	int32	error_code		= 1;
}

// 城池宣战
message MsgCL2GSStartTempleWarRequest
{
    uint64	temple_id = 1;
}

message MsgGS2CLStartTempleWarReply
{
	int32	error_code		= 1;
}

message MsgCL2GSMyStrongholdRequest
{

}

message MsgGS2CLMyStrongholdReply
{
    repeated protomsg.GuildStrongholdData my_stronghold_datas = 1;
    int32   error_code  = 99;
}

// 联盟成就开始
////////////////////////////////////////////////////////

//更新
message MsgGS2CLGuildAchievmentNotice 
{
  repeated protomsg.TaskData achievement_data	= 1;//成就
}

//修改荣誉墙请求
message MsgCL2GSChangeMedalWallRequest 
{
  GuildMedalWallInfo info = 1;
}

//修改荣誉墙回复
message MsgCL2GSChangeMedalWallReply 
{
  GuildMedalWallInfo info = 1;
  int32   error_code  = 99;
}

message MsgGS2CLGuildMedalWallNotice 
{
  GuildMedalWallInfo info = 1;
}

message MsgCL2GSGuildLevelUpRequest
{
    
}

message MsgGS2CLGuildLevelUpReply
{
    int32 error_code = 99;
}

message MsgCL2GSGuildExpDonateRequest
{
    protomsg.GuildExpDonateType type = 1;
}

message MsgGS2CLGuildExpDonateReply
{
    protomsg.GuildExpDonateType type = 1;
    int32 error_code = 99;
}

message MsgGS2CLGuildExpDonateNotice
{
    uint32 exp_gem_donate_count = 1;        // 联盟经验宝石捐献次数
    uint32 exp_resource_donate_count = 2;   // 联盟经验资源捐献次数
    uint64 exp_from_donate = 3;             // 捐赠获得的经验
    uint64 exp_from_monster = 4;            // 打怪获得的经验
}

message MsgGS2CLGuildExpDonateCountNotice
{
    uint32 exp_gem_donate_count = 1;        // 联盟经验宝石捐献次数
    uint32 exp_resource_donate_count = 2;   // 联盟经验资源捐献次数
}

message MsgCL2GSGuildTaskRefreshRequest
{
    uint32 task_id = 1;
}

message MsgGS2CLGuildTaskRefreshReply
{
	int32 error_code = 99;
}

// 联盟成就结束
////////////////////////////////////////////////////////